// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Integration Default 1`] = `
<div
  className="frame"
>
  <div
    className="loader"
    data-loaded={false}
  >
    <img
      src="test-file-stub"
    />
  </div>
  <iframe
    className="iframe"
    data-loaded={false}
    frameBorder={0}
    scrolling="no"
    src="http://127.0.0.1:8080/"
    style={
      Object {
        "height": "100px",
        "width": "100%",
      }
    }
    title="Secure Payment Method Frame"
  />
</div>
`;

exports[`Storyshots Integration Loading 1`] = `
<div
  className="frame"
>
  <div
    className="loader"
    data-loaded={false}
  >
    <img
      src="test-file-stub"
    />
  </div>
  <iframe
    className="iframe"
    data-loaded={false}
    frameBorder={0}
    scrolling="no"
    src="http://localhost:8080"
    style={
      Object {
        "height": "100px",
        "width": "100%",
      }
    }
    title="Secure Payment Method Frame"
  />
</div>
`;
